--- a/XTour/XTour-Info.plist
+++ b/XTour/XTour-Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Diese App benötigt deine Position für das Aufzeichnen deiner Tour</string>
 	<key>NSLocationUsageDescription</key>
 	<string>Diese App benötigt deine Position für das Aufzeichnen deiner Tour</string>
 	<key>NSLocationAlwaysUsageDescription</key>
